--- a/docs/styles.css
+++ b/docs/styles.css
@@ -66,7 +66,10 @@
         .imgMob {
             display: none !important;
         }
-
+        video {
+            max-width: 389px;
+            max-height: 514.7px;
+        }
       
 
 
@@ -102,6 +105,10 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+            }
+            video {
+                max-width: 300px;
+                max-height: 414.7px;
             }
 
 
