--- a/docs/styles.css
+++ b/docs/styles.css
@@ -104,6 +104,7 @@
             }
             video {
                 width: 300px !important;
+                max-height: 500px !important;
             }
 
         }
