--- a/docs/styles.css
+++ b/docs/styles.css
@@ -41,7 +41,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
+            max-width: 389px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -77,6 +77,7 @@
             .imgMob {
                 display: block !important;
                 width: 300px !important;
+                height: 400px !important;
             }
             
             #capture-btn{
@@ -104,7 +105,6 @@
             }
             video {
                 width: 300px !important;
-                max-height: 500px !important;
             }
 
         }
